# fc_system

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  config-wsl  config.json  deleds  deleter.py  deploy  depython  desensor_server  detest  detest_server  id_rsa  local_convert.py  old_sensor.py  sensor_server.py  sensor_test.py  server.py  test
camera_script/: CameraHandler.py  camera_main.py  camera_script.service  utils.py
leds/: deploy  leds.py  leds.service  leds_config.json  pipes.py  requirements.txt
old_rust_code/: Cargo.toml  Dockerfile
old_rust_code/src/: cam_cap.rs
old_rust_code/templates/: distance.html
python_tester/: test_client.py  test_server.py
sensor_server/: Beam_sensor.py  TOF_sensor.py  config.json  sensor_server.py  sensor_server.service  utils.py
sensor_test/: sensor_test.py
src/: cam_cap.rs  config.rs  generator.rs  i2c_sensor.rs  main.rs  server.rs  video_capture.rs
static/: main.js
vscode/: launch.json
